--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -61,8 +61,9 @@
     border-color: $primary;
 }
 .btn-primary:hover {
-    background-color: #06c4ea;
+    background-color: #16d2f7;
     border-color: #06c4ea;
+    font-weight: bold;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
