--- a/public/css/theme/main.css
+++ b/public/css/theme/main.css
@@ -1460,7 +1460,10 @@ h6 {
 .single-input:focus {
     outline: none;
 }
-
+.input-group > .form-control:not(:first-child), .input-group > .custom-select:not(:first-child) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
 .input-group-icon {
     position: relative;
 }
@@ -2543,7 +2546,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .banner-area .overlay-bg {
-    background-color: rgb(0 0 0 / 75%);
+    background-color: rgb(0 0 0 / 50%);
 }
 
 @media (max-width: 767px) {
@@ -2621,7 +2624,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .header-right {
     background-color: #f9d700;
-    border: 1px solid #4b5263;
+    /* border: 1px solid #4b5263; */
     padding: 50px;
     text-align: center;
 }
