--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,11 +30,11 @@
 
 @import './datepicker.scss';
 
-.fa:hover,
-.fas:hover,
-.far:hover {
-    color: #504e4e;
-}
+// .fa:hover,
+// .fas:hover,
+// .far:hover {
+//     color: #504e4e;
+// }
 .grab {
     cursor: grab;
 }
