--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -310,6 +310,7 @@ button:focus{
 .border-left-danger {
     border-left: 5px solid #ff7851 !important;
     background-color: #f9c1c1;
+    font-style: italic;
 }
 
 select, .form-control {
