--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,9 +30,9 @@
 
 @import './datepicker.scss';
 
-// .fa:hover,
-// .fas:hover,
-// .far:hover {
+// .btn:hover .fa,
+// .btn:hover .fas,
+// .btn:hover .far {
 //     color: #504e4e;
 // }
 .grab {
