--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -335,7 +335,10 @@ select, .form-control {
 .flatpickr-confirm svg {
     display: none;
 }
-
+.flatpickr-day.selected {
+    background-color: #16d2f7 !important;
+    border-color: #16d2f7 !important;
+}
 .flatpickr-confirm:hover {
     background-color: #16d2f7 !important;
     border-color: #06c4ea !important;
