--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -256,11 +256,11 @@ nav {
 
     padding: 8px 12px;
 
-    border: 1px solid transparent;
+    border: 1px solid #d2d3d5;
     border-radius: 4px;
     background-color: white;
 
-    /* box-shadow: 0 1px 3px 0 #e6ebf1; */
+    box-shadow: 0 1px 3px 0 #e6ebf1;
     -webkit-transition: box-shadow 150ms ease;
     transition: box-shadow 150ms ease;
 }
