--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -37,32 +37,38 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
  
-$blue:    #007bff !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #FF7851 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #FFCE67 !default;
-$green:   #56CC9D !default;
-$teal:    #20c997 !default;
-$cyan:    #6CC3D5 !default;
- 
+$blue: #007bff !default;
+$indigo: #6610f2 !default;
+$purple: #6f42c1 !default;
+$pink: #e83e8c !default;
+$red: #ff7851 !default;
+$orange: #fd7e14 !default;
+$yellow: #ffce67 !default;
+$yellow-light: #fff0d0 !default;
+$green: #56cc9d !default;
+$green-light: #c1fae2 !default;
+$teal: #20c997 !default;
+$cyan: #6cc3d5 !default;
+$cyan-light: #bbebf5 !default;
+
 // $primary:       #1eacc7 !default;
-$primary:       #3acae6 !default;
+$primary: #3acae6 !default;
 $primary-light: #c0e0e669 !default;
 // $primary:       #78C2AD !default;
 // $secondary:     #5856D6 !default;
-$secondary:     #5865f5 !default;
-// $secondary:     #6481f2 !default;
+$secondary: #5865f5 !default;
+$secondary-light: #9faeeb !default;
 // $secondary:     #F3969A !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
+$success: $green !default;
+$success-light: $green-light !default;
+$info: $cyan !default;
+$info-light: $cyan-light !default;
+$warning: $yellow !default;
+$warning-light: $yellow-light !default;
+$danger: $red !default;
 $danger-light: #fbe2dab3 !default;
-$light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+$light: $gray-100 !default;
+$dark: $gray-800 !default;
  
 $yiq-contrasted-threshold: 250 !default;
 
